Added more code to the file still on positioning in the center

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
 
         <h3>Absolute Positioning Method</h3>
         <div class="green-square"></div>
+
+        <h3>Transform</h3>
+        <div class="orange-square"></div>
     </body>
 </html>
